--- a/css/stylish-portfolio.css
+++ b/css/stylish-portfolio.css
@@ -3,12 +3,15 @@
  * Copyright 2013-2019 Start Bootstrap
  * Licensed under MIT (https://github.com/BlackrockDigital/startbootstrap-stylish-portfolio/blob/master/LICENSE)
  */
+ html,body
+ {
+     width: 100%;
+     height: 100%;
+     margin: 0px;
+     padding: 0px;
+     overflow-x: hidden; 
+ }
 
-body,
-html {
-  width: 100%;
-  height: 100%;
-}
 
 body {
   font-family: 'Source Sans Pro';
@@ -385,6 +388,15 @@ a:hover, a:focus, a:active {
   width: 100%;
   height:100vh;
 }
+
+/* .circles{
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+} */
 
 .circles li{
   position: absolute;
