--- a/css/stylish-portfolio.css
+++ b/css/stylish-portfolio.css
@@ -7,11 +7,13 @@
  {
      width: 100%;
      height: 100%;
-     margin: 0px;
-     padding: 0px;
      overflow-x: hidden; 
  }
-
+/* body,
+html {
+  width: 100%;
+  height: 100%;
+} */
 
 body {
   font-family: 'Source Sans Pro';
