--- a/css/stylish-portfolio.css
+++ b/css/stylish-portfolio.css
@@ -3,17 +3,13 @@
  * Copyright 2013-2019 Start Bootstrap
  * Licensed under MIT (https://github.com/BlackrockDigital/startbootstrap-stylish-portfolio/blob/master/LICENSE)
  */
- html,body
- {
-     width: 100%;
-     height: 100%;
-     /* overflow-x: hidden;  */
- }
-/* body,
+
+body,
 html {
   width: 100%;
   height: 100%;
-} */
+  overflow-x: hidden;
+}
 
 body {
   font-family: 'Source Sans Pro';
